# SunoX

./: .gitignore  README.md  build.gradle  clean-rebuild.sh  firebase.json  firestore.rules  gradle.properties  keystore.properties.example  local.properties  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp  audio_processor.h  native-lib.cpp  oboe_audio_engine.cpp  oboe_audio_engine.h
app/src/main/java/com/soundamplifier/: SunoXApp.kt
app/src/main/java/com/soundamplifier/audio/: AmplifierPreset.kt  AudioEngine.kt  AudioProcessor.kt  AudiogramTest.kt  MicSourceManager.kt  MicSourceOption.kt  MicSourceType.kt  NativeAudioEngine.kt  PresetMerge.kt
app/src/main/java/com/soundamplifier/auth/: AuthState.kt  AuthViewModel.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  font_certs.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-gu/: strings.xml
app/src/main/res/values-hi/: strings.xml
app/src/main/res/values-mr/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-te/: strings.xml
app/src/main/res/xml/: locales_config.xml
functions/: README.md  package-lock.json  package.json
functions/src/: index.ts
server/: .env  .env.example  README.md  index.js  package.json
website/: delete-account.html  index.html  main.js  privacy.html  styles.css
website/delete-account/: index.html
(+33 files in other folders)
